# pkg/note_v1/note.pb.validate.go
@@ -56,6 +56,35 @@ func (m *Empty) validate(all bool) error {
 
 	var errors []error
 
+	if all {
+		switch v := interface{}(m.GetEmpty()).(type) {
+		case interface{ ValidateAll() error }:
+			if err := v.ValidateAll(); err != nil {
+				errors = append(errors, EmptyValidationError{
+					field:  "Empty",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		case interface{ Validate() error }:
+			if err := v.Validate(); err != nil {
+				errors = append(errors, EmptyValidationError{
+					field:  "Empty",
+					reason: "embedded message failed validation",
+					cause:  err,
+				})
+			}
+		}
+	} else if v, ok := interface{}(m.GetEmpty()).(interface{ Validate() error }); ok {
+		if err := v.Validate(); err != nil {
+			return EmptyValidationError{
+				field:  "Empty",
+				reason: "embedded message failed validation",
+				cause:  err,
+			}
+		}
+	}
+
 	if len(errors) > 0 {
 		return EmptyMultiError(errors)
 	}
@@ -543,22 +572,21 @@ var _ interface {
 	ErrorName() string
 } = UpdateNoteInfoValidationError{}
 
-// Validate checks the field values on WholeNote with the rules defined in the
-// proto definition for this message. If any rules are violated, the first
-// error encountered is returned, or nil if there are no violations.
-func (m *WholeNote) Validate() error {
+// Validate checks the field values on Note with the rules defined in the proto
+// definition for this message. If any rules are violated, the first error
+// encountered is returned, or nil if there are no violations.
+func (m *Note) Validate() error {
 	return m.validate(false)
 }
 
-// ValidateAll checks the field values on WholeNote with the rules defined in
-// the proto definition for this message. If any rules are violated, the
-// result is a list of violation errors wrapped in WholeNoteMultiError, or nil
-// if none found.
-func (m *WholeNote) ValidateAll() error {
+// ValidateAll checks the field values on Note with the rules defined in the
+// proto definition for this message. If any rules are violated, the result is
+// a list of violation errors wrapped in NoteMultiError, or nil if none found.
+func (m *Note) ValidateAll() error {
 	return m.validate(true)
 }
 
-func (m *WholeNote) validate(all bool) error {
+func (m *Note) validate(all bool) error {
 	if m == nil {
 		return nil
 	}
@@ -566,7 +594,7 @@ func (m *WholeNote) validate(all bool) error {
 	var errors []error
 
 	if m.GetId() <= 0 {
-		err := WholeNoteValidationError{
+		err := NoteValidationError{
 			field:  "Id",
 			reason: "value must be greater than 0",
 		}
@@ -580,7 +608,7 @@ func (m *WholeNote) validate(all bool) error {
 		switch v := interface{}(m.GetNoteBody()).(type) {
 		case interface{ ValidateAll() error }:
 			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, WholeNoteValidationError{
+				errors = append(errors, NoteValidationError{
 					field:  "NoteBody",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -588,7 +616,7 @@ func (m *WholeNote) validate(all bool) error {
 			}
 		case interface{ Validate() error }:
 			if err := v.Validate(); err != nil {
-				errors = append(errors, WholeNoteValidationError{
+				errors = append(errors, NoteValidationError{
 					field:  "NoteBody",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -597,7 +625,7 @@ func (m *WholeNote) validate(all bool) error {
 		}
 	} else if v, ok := interface{}(m.GetNoteBody()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
-			return WholeNoteValidationError{
+			return NoteValidationError{
 				field:  "NoteBody",
 				reason: "embedded message failed validation",
 				cause:  err,
@@ -609,7 +637,7 @@ func (m *WholeNote) validate(all bool) error {
 		switch v := interface{}(m.GetCreatedAt()).(type) {
 		case interface{ ValidateAll() error }:
 			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, WholeNoteValidationError{
+				errors = append(errors, NoteValidationError{
 					field:  "CreatedAt",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -617,7 +645,7 @@ func (m *WholeNote) validate(all bool) error {
 			}
 		case interface{ Validate() error }:
 			if err := v.Validate(); err != nil {
-				errors = append(errors, WholeNoteValidationError{
+				errors = append(errors, NoteValidationError{
 					field:  "CreatedAt",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -626,7 +654,7 @@ func (m *WholeNote) validate(all bool) error {
 		}
 	} else if v, ok := interface{}(m.GetCreatedAt()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
-			return WholeNoteValidationError{
+			return NoteValidationError{
 				field:  "CreatedAt",
 				reason: "embedded message failed validation",
 				cause:  err,
@@ -638,7 +666,7 @@ func (m *WholeNote) validate(all bool) error {
 		switch v := interface{}(m.GetUpdatedAt()).(type) {
 		case interface{ ValidateAll() error }:
 			if err := v.ValidateAll(); err != nil {
-				errors = append(errors, WholeNoteValidationError{
+				errors = append(errors, NoteValidationError{
 					field:  "UpdatedAt",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -646,7 +674,7 @@ func (m *WholeNote) validate(all bool) error {
 			}
 		case interface{ Validate() error }:
 			if err := v.Validate(); err != nil {
-				errors = append(errors, WholeNoteValidationError{
+				errors = append(errors, NoteValidationError{
 					field:  "UpdatedAt",
 					reason: "embedded message failed validation",
 					cause:  err,
@@ -655,7 +683,7 @@ func (m *WholeNote) validate(all bool) error {
 		}
 	} else if v, ok := interface{}(m.GetUpdatedAt()).(interface{ Validate() error }); ok {
 		if err := v.Validate(); err != nil {
-			return WholeNoteValidationError{
+			return NoteValidationError{
 				field:  "UpdatedAt",
 				reason: "embedded message failed validation",
 				cause:  err,
@@ -664,18 +692,18 @@ func (m *WholeNote) validate(all bool) error {
 	}
 
 	if len(errors) > 0 {
-		return WholeNoteMultiError(errors)
+		return NoteMultiError(errors)
 	}
 
 	return nil
 }
 
-// WholeNoteMultiError is an error wrapping multiple validation errors returned
-// by WholeNote.ValidateAll() if the designated constraints aren't met.
-type WholeNoteMultiError []error
+// NoteMultiError is an error wrapping multiple validation errors returned by
+// Note.ValidateAll() if the designated constraints aren't met.
+type NoteMultiError []error
 
 // Error returns a concatenation of all the error messages it wraps.
-func (m WholeNoteMultiError) Error() string {
+func (m NoteMultiError) Error() string {
 	var msgs []string
 	for _, err := range m {
 		msgs = append(msgs, err.Error())
@@ -684,11 +712,11 @@ func (m WholeNoteMultiError) Error() string {
 }
 
 // AllErrors returns a list of validation violation errors.
-func (m WholeNoteMultiError) AllErrors() []error { return m }
+func (m NoteMultiError) AllErrors() []error { return m }
 
-// WholeNoteValidationError is the validation error returned by
-// WholeNote.Validate if the designated constraints aren't met.
-type WholeNoteValidationError struct {
+// NoteValidationError is the validation error returned by Note.Validate if the
+// designated constraints aren't met.
+type NoteValidationError struct {
 	field  string
 	reason string
 	cause  error
@@ -696,22 +724,22 @@ type WholeNoteValidationError struct {
 }
 
 // Field function returns field value.
-func (e WholeNoteValidationError) Field() string { return e.field }
+func (e NoteValidationError) Field() string { return e.field }
 
 // Reason function returns reason value.
-func (e WholeNoteValidationError) Reason() string { return e.reason }
+func (e NoteValidationError) Reason() string { return e.reason }
 
 // Cause function returns cause value.
-func (e WholeNoteValidationError) Cause() error { return e.cause }
+func (e NoteValidationError) Cause() error { return e.cause }
 
 // Key function returns key value.
-func (e WholeNoteValidationError) Key() bool { return e.key }
+func (e NoteValidationError) Key() bool { return e.key }
 
 // ErrorName returns error name.
-func (e WholeNoteValidationError) ErrorName() string { return "WholeNoteValidationError" }
+func (e NoteValidationError) ErrorName() string { return "NoteValidationError" }
 
 // Error satisfies the builtin error interface
-func (e WholeNoteValidationError) Error() string {
+func (e NoteValidationError) Error() string {
 	cause := ""
 	if e.cause != nil {
 		cause = fmt.Sprintf(" | caused by: %v", e.cause)
@@ -723,14 +751,14 @@ func (e WholeNoteValidationError) Error() string {
 	}
 
 	return fmt.Sprintf(
-		"invalid %sWholeNote.%s: %s%s",
+		"invalid %sNote.%s: %s%s",
 		key,
 		e.field,
 		e.reason,
 		cause)
 }
 
-var _ error = WholeNoteValidationError{}
+var _ error = NoteValidationError{}
 
 var _ interface {
 	Field() string
@@ -738,7 +766,7 @@ var _ interface {
 	Key() bool
 	Cause() error
 	ErrorName() string
-} = WholeNoteValidationError{}
+} = NoteValidationError{}
 
 // Validate checks the field values on CreateNoteRequest with the rules defined
 // in the proto definition for this message. If any rules are violated, the
